# swc-react-native

./: .gitattributes  .gitignore  .gitmodules  .oxlintrc.json  .yarnrc.yml  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.d.ts  index.js  index.mjs  justfile  mise.toml  package.json
bench/codegen/swc/: Cargo.toml
bench/codegen/swc/src/: main.rs
bench/swc/: Cargo.toml
bench/swc/src/: main.rs
crates/react-native-codegen/: Cargo.toml
crates/react-native-codegen/src/: codegen_schema.rs  lib.rs  schema_validator.rs
crates/react-native-codegen/src/generators/: generate_view_config_js.rs  mod.rs
crates/react-native-codegen/src/parsers/: mod.rs
crates/react-native-codegen/src/parsers/flow/: mod.rs
crates/react-native-codegen/src/parsers/typescript/: mod.rs
crates/swc-plugin-codegen/: Cargo.toml
crates/swc-plugin-codegen/src/: lib.rs  visitor.rs
crates/swc-plugin-codegen/tests/: transform_ts_test.rs
crates/swc-plugin-codegen/tests/common/: mod.rs
crates/swc-plugin-codegen/tests/snapshots/: transform_flow_test__commands_with_simple_coverage.snap  transform_flow_test__full_native_component.snap  transform_flow_test__full_typed_native_component.snap  transform_flow_test__not_a_native_component.snap  transform_test__commands_with_simple_coverage.snap  transform_test__full_native_component.snap  transform_test__full_typed_native_component.snap  transform_test__not_a_native_component.snap  transform_ts_test__ts_commands_with_coverage.snap  transform_ts_test__ts_extends_local_interfaces.snap  transform_ts_test__ts_extends_recursive_chain.snap  transform_ts_test__ts_full_native_component.snap  transform_ts_test__ts_not_a_native_component.snap  transform_ts_test__ts_qualified_event_handler.snap  transform_ts_test__ts_simple_component_no_commands.snap
crates/swc-react-native/: Cargo.toml
crates/swc-react-native-codegen/: Cargo.toml
crates/swc-react-native-codegen/src/: lib.rs  options.rs  visitor.rs
crates/swc-react-native-codegen/src/codegen/: codegen_schema.rs  mod.rs  schema_validator.rs
crates/swc-react-native-codegen/src/codegen/generators/: generate_view_config_js.rs
crates/swc-react-native-codegen/src/codegen/parsers/: mod.rs  native_modules.rs
crates/swc-react-native-codegen/tests/: native_module_parser_test.rs  transform_flow_test.rs  transform_ts_test.rs
crates/swc-react-native-codegen/tests/common/: mod.rs
crates/swc-react-native-codegen/tests/snapshots/: transform_flow_test__commands_with_simple_coverage.snap  transform_flow_test__flow_nullable_event_handlers.snap  transform_flow_test__full_native_component.snap  transform_flow_test__full_typed_native_component.snap  transform_flow_test__modern_readonly_full_native_component.snap  transform_flow_test__modern_readonly_minimal_view_props.snap  transform_flow_test__not_a_native_component.snap  transform_test__commands_with_simple_coverage.snap  transform_test__full_native_component.snap  transform_test__full_typed_native_component.snap  transform_test__not_a_native_component.snap  transform_ts_test__ts_commands_with_coverage.snap  transform_ts_test__ts_extends_local_interfaces.snap  transform_ts_test__ts_extends_recursive_chain.snap  transform_ts_test__ts_full_native_component.snap  transform_ts_test__ts_not_a_native_component.snap  transform_ts_test__ts_nullable_event_handlers.snap  transform_ts_test__ts_qualified_event_handler.snap  transform_ts_test__ts_simple_component_no_commands.snap
crates/swc-react-native-hermes-v1-fixes/: Cargo.toml
crates/swc-react-native-hermes-v1-fixes/src/: ast.rs  lib.rs  test_utils.rs
crates/swc-react-native-hermes-v1-fixes/src/visitors/: async_arrow_non_simple_params.rs  class_in_finally.rs  mod.rs  super_in_object_accessor.rs
crates/swc-react-native-hermes-v1-fixes/src/visitors/snapshots/: swc_react_native_hermes_v1_fixes__visitors__async_arrow_non_simple_params__tests__lowers_defaults_and_destructuring.snap  swc_react_native_hermes_v1_fixes__visitors__async_arrow_non_simple_params__tests__rest_param_wraps_in_sync_arrow.snap  swc_react_native_hermes_v1_fixes__visitors__class_in_finally__tests__class_declaration_wraps_legacy_class_binding.snap  swc_react_native_hermes_v1_fixes__visitors__class_in_finally__tests__class_expression_wraps_expression_site.snap  swc_react_native_hermes_v1_fixes__visitors__class_in_finally__tests__class_in_function_inside_finally_is_left_alone.snap  swc_react_native_hermes_v1_fixes__visitors__class_in_finally__tests__function_local_finally_is_still_visited.snap  swc_react_native_hermes_v1_fixes__visitors__super_in_object_accessor__tests__accessor_arrow_body_still_rewrites_accessor_key.snap  (+2 more)
crates/swc-react-native-worklets/: Cargo.toml
crates/swc-react-native-worklets/src/: closure.rs  factory.rs  gestures.rs  globals.rs  hash.rs  hooks.rs  inline_style.rs  lib.rs  options.rs  transform.rs  visitor.rs  web.rs
crates/swc-react-native-worklets/tests/: transform_test.rs
crates/swc-react-native-worklets/tests/common/: mod.rs
crates/swc-react-native-worklets/tests/snapshots/: transform_test__class_without_worklet_marker_passes_through.snap  transform_test__function_with_worklet_directive.snap  transform_test__no_worklet_directive_passes_through.snap  transform_test__strict_global_captures_unlisted_globals.snap  transform_test__use_animated_style_callback_is_workletized.snap  transform_test__worklet_arrow_assigned_to_variable.snap  transform_test__worklet_captures_outer_variable.snap  transform_test__worklet_class_constructor_params_are_not_captured_as_closure.snap  transform_test__worklet_class_marker_emits_factory_wrapper.snap  transform_test__worklet_class_marker_on_method_with_reserved_keyword_name.snap  transform_test__worklet_class_marker_preserves_default_export.snap  transform_test__worklet_class_marker_preserves_named_export.snap  transform_test__worklet_class_marker_skipped_when_disabled.snap  transform_test__worklet_class_marker_without_methods_still_wraps.snap
crates/swc-react-native/src/: lib.rs
transform/: Cargo.toml
transform/src/: lib.rs  transformer.rs
transform/tests/: fixture.rs
(+19 files in other folders)
