[workspace]
members = ["crates/*"]
exclude = ["react-native", "bench/swc"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
swc_common = "21.0.1"
swc_atoms = "9.0.0"
swc_ecma_ast = "23.0.0"
swc_ecma_parser = { version = "39.0.0", features = ["flow", "typescript"] }
swc_ecma_visit = "23.0.0"
swc_ecma_codegen = "26.0.1"
react_native_codegen = { path = "crates/react-native-codegen" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
insta = { version = "1", features = ["glob"] }
