[workspace]
members = ["crates/*"]
exclude = [
    "react-native",
    "react-native-reanimated",
    "bench/codegen/swc",
    "bench/worklets/swc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
swc_common = { version = "21.0.1", features = ["sourcemap"] }
swc_atoms = "9.0.0"
swc_ecma_ast = "23.0.0"
swc_ecma_parser = { version = "39.0.0", features = ["flow", "typescript"] }
swc_ecma_visit = "23.0.0"
swc_ecma_codegen = "26.0.1"
swc_ecma_utils = "29.1.0"
swc_react_native_codegen = { path = "crates/swc-react-native-codegen" }
swc_react_native_worklets = { path = "crates/swc-react-native-worklets" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
once_cell = "1"
rustc-hash = "2"
insta = { version = "1", features = ["glob"] }
