[package]
name = "bench_swc"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "bench_swc"
path = "src/main.rs"

[dependencies]
swc_common = { path = "../../swc/crates/swc_common" }
swc_ecma_ast = { path = "../../swc/crates/swc_ecma_ast" }
swc_ecma_parser = { path = "../../swc/crates/swc_ecma_parser", features = ["flow", "typescript"] }
swc_ecma_codegen = { path = "../../swc/crates/swc_ecma_codegen" }
swc_ecma_visit = { path = "../../swc/crates/swc_ecma_visit" }
swc_react_native_codegen = { path = "../../crates/swc-react-native-codegen" }
anyhow = "1"
