[package]
name = "react_native_codegen"
version.workspace = true
edition.workspace = true

[dependencies]
swc_common = { workspace = true }
swc_atoms = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_visit = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
