[package]
name = "swc_plugin_codegen"
version.workspace = true
edition.workspace = true

[dependencies]
swc_common = { workspace = true }
swc_atoms = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_visit = { workspace = true }
swc_ecma_codegen = { workspace = true }
react_native_codegen = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
