[package]
name = "swc_react_native_worklets"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SWC port of the react-native-worklets Babel plugin"

[dependencies]
swc_common = { workspace = true }
swc_atoms = { workspace = true }
swc_ecma_ast = { workspace = true }
swc_ecma_parser = { workspace = true }
swc_ecma_visit = { workspace = true }
swc_ecma_codegen = { workspace = true }
swc_ecma_utils = { workspace = true }
swc_ecma_compat_es2015 = { workspace = true }
swc_ecma_compat_es2022 = { workspace = true }
swc_ecma_transformer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
